--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   <header>
-    <h1> <img src = "img/dmark.png" width = 50px height = 50px />
+    <h1> <img src = "img/dmark.png" width = 50px height = 50px>
   </header>
   <nav>
     <ul>
